--- a/brew/templates/posts/create.html
+++ b/brew/templates/posts/create.html
@@ -1,29 +1,35 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h2>{% block title %}show off yer brew{% endblock %}</h2>
+<h2>{% block title %}show off yer brew{% endblock %}</h2>
 {% endblock header %}
 
 {% block content %}
-    <form method="post">
-        <div class="form-group">
-            <label for="author">your name here</label>
-            <input type="text" name="author" id="author" value="{{ request.form['author'] }}" class="form-control">
-        </div>
+<form method="post">
+    <div class="form-group">
+        <label for="author">your name here</label>
+        <input type="text" name="author" id="author" value="{{ request.form['author'] }}" class="form-control">
+    </div>
 
-        <div class="form-group">
-            <label for="brew">this is where your coffee picture goes</label>
-            <input type="file" name="brew" id="brew" accept="image/png, image/jpeg" value="{{ request.form['brew'] }}" class="form-control">
-        </div>
+    <div class="form-group">
+        <label for="title">title</label>
+        <input type="text" name="title" id="title" value="{{ request.form['title'] }}" class="form-control">
+    </div>
 
-        <div class="form-group">
-            <label for="description">nerd out here</label>
-            <textarea name="description" id="description" class="form-control">{{ request.form['description'] }}</textarea>
-        </div>
+    <div class="form-group">
+        <label for="brew">this is where your coffee picture goes</label>
+        <input type="file" name="brew" id="brew" accept="image/png, image/jpeg" value="{{ request.form['brew'] }}"
+            class="form-control">
+    </div>
 
-        <div class="form-group">
-            <input type="submit" value="Post Message" class="submit-btn">
-        </div>
+    <div class="form-group">
+        <label for="content">nerd out here</label>
+        <textarea name="content" id="content" class="form-control">{{ request.form['content'] }}</textarea>
+    </div>
 
-    </form>
+    <div class="form-group">
+        <input type="submit" value="Post Message" class="submit-btn">
+    </div>
+
+</form>
 {% endblock content %}
