--- a/brew/templates/_navigation.html
+++ b/brew/templates/_navigation.html
@@ -1,7 +1,6 @@
 <nav>
-    <ul>
-      <li><a href="{{ url_for('pages.home') }}">Home</a></li>
-      <li><a href="{{ url_for('pages.about') }}">About</a></li>
-    </ul>
-  </nav>
-  
+  <ul>
+    <li><a href="{{ url_for('posts.posts') }}">Home</a></li>
+    <li><a href="{{ url_for('posts.create') }}">Add Post</a></li>
+  </ul>
+</nav>
