--- a/brew/templates/posts/create.html
+++ b/brew/templates/posts/create.html
@@ -5,7 +5,7 @@
 {% endblock header %}
 
 {% block content %}
-<form method="post">
+<form method="POST" action="/create" enctype="multipart/form-data">
     <div class="form-group">
         <label for="author">your name here</label>
         <input type="text" name="author" id="author" value="{{ request.form['author'] }}" class="form-control">
@@ -18,8 +18,8 @@
 
     <div class="form-group">
         <label for="brew">this is where your coffee picture goes</label>
-        <input type="file" name="brew" id="brew" accept="image/png, image/jpeg" value="{{ request.form['brew'] }}"
-            class="form-control">
+        <input type="file" name="brew" id="brew" accept="image/png, image/jpeg, image/jpg, image/gif"
+            value="{{ request.form['brew'] }}" class="form-control">
     </div>
 
     <div class="form-group">
