--- a/brew/templates/posts/posts.html
+++ b/brew/templates/posts/posts.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h2>{% block title %}brews{% endblock title %}</h2>
+<h2>{% block title %}brews{% endblock title %}</h2>
 {% endblock header %}
 
 {% block content %}
-  {% for post in posts %}
-    <article>
-        <img src="{{ 'brew' }}" alt="a mighty brew">
-      <aside>{{post["description"]}}\nPosted by {{ post["author"] }} on {{ post["created"].strftime("%b %d, %Y at %I:%M%p") }}</aside>
-    </article>
-  {% endfor %}
+{% for post in posts %}
+<article>
+  <img src="{{ url_for('posts.serve_image', post_id=post.id) }}" alt="a mighty brew pic">
+  <aside>{{post["title"]}}\n{{post["content"]}}\nPosted by {{ post["author"] }} on {{ post["created"].strftime("%b %d,
+    %Y at %I:%M%p")
+    }}</aside>
+</article>
+{% endfor %}
 {% endblock content %}
