--- a/brew/templates/posts/create.html
+++ b/brew/templates/posts/create.html
@@ -18,8 +18,8 @@
 
     <div class="form-group">
         <label for="brew">this is where your coffee picture goes</label>
-        <input type="file" name="brew" id="brew" accept="image/png, image/jpeg, image/jpg, image/gif"
-            value="{{ request.form['brew'] }}" class="form-control">
+        <input type="file" name="brew" id="brew" accept="image/jpeg, image/jpg" value="{{ request.form['brew'] }}"
+            class="form-control">
     </div>
 
     <div class="form-group">
