--- a/brew/static/css/styles.css
+++ b/brew/static/css/styles.css
@@ -1,38 +1,49 @@
 /* ----- imports ----- */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-  /* ----- Global Variables ----- */
+/* ----- Global Variables ----- */
 :root {
-    --ff-primary: 'Cormorant Garamond', serif;
-    --ff-secondary: 'Playfair Display', serif;
+    --ff-title: 'Raleway', sans-serif;
+    --ff-primary: 'Roboto', arial, sans-serif;
+    --ff-secondary: 'Open Sans', sans-serif;
 }
 
 * {
     box-sizing: border-box;
-  }
-
-  /* ----- TYPOGRAPHY ----- */
-
-  h1,h2,h3 {
-    font-family: var(--ff-primary);
-    line-height: 1.5;
-    margin: 0;
 }
 
+/* ----- TYPOGRAPHY ----- */
 h1 {
-    font-size: 2em;
+    font-family: var(--ff-title);
+    margin: 0 0;
+    font-size: 3em;
+    color: #0f0f0f;
 }
+
 h2 {
-    font-size: 1.5em;
+    font-family: var(--ff-primary);
+    margin: 0;
+    font-size: 2em;
+    color: #0f0f0f;
 }
+
 h3 {
-    font-size: 1.25em;
+    font-family: var(--ff-primary);
+    font-size: 1em;
+    color: #3f3f3f
+}
+
+h4 {
+    font-family: var(--ff-secondary);
+    font-size: 1em;
+    color: #3f3f3f
 }
 
 p {
     font-family: var(--ff-secondary);
-    font-size: 1em;
+    font-size: 1.4em;
     line-height: 2;
     margin: 0;
 }
@@ -45,30 +56,123 @@ a {
 /* ----- Main Structure ----- */
 body {
     margin: 0 auto;
-    text-align: center;
+    max-width: 80%;
 }
 
 main {
-    width: 80%;
+    width: 80vw;
     margin: 0 auto;
+}
+
+#title {
+    text-align: center;
 }
 
 /* ----- Navigation ----- */
 nav {
     display: flex;
+    flex-direction: row;
 
     width: 100%;
     height: 100px;
 
-    margin-top: 2rem;
     gap: 1rem;
 
     align-items: center;
     justify-content: center;
+
 }
 
-nav > a {
+nav>a {
     font-size: 1.5em;
     white-space: nowrap;
-    margin-left: 50px;
+
+}
+
+/* ----- Posts ----- */
+
+article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.post-title {
+    justify-self: flex-start;
+}
+
+.post-image-container {
+    max-width: 300px;
+    max-height: 300px;
+    border-radius: 12%;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+
+}
+
+div {
+    max-width: 500px;
+    width: 100%;
+    text-align: left;
+
+}
+
+.description-box {
+    border: 1px solid #eee;
+    border-radius: 4px;
+}
+
+/* ----- add post ----- */
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+
+}
+
+input[type=text] {
+    font-family: var(--ff-secondary);
+    font-size: 1em;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+}
+
+input[type=file] {
+    font-family: var(--ff-secondary);
+    font-size: 1em;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea {
+    font-family: var(--ff-secondary);
+    font-size: 1em;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-group {
+    font-family: var(--ff-secondary);
+    font-size: 1em;
+    line-height: 1;
+    margin: 0;
 }
