--- a/brew/templates/base.html
+++ b/brew/templates/base.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Shopping List App - {% block title %}{% endblock title %}</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    </head>
-    <body>
-        <h1>brew.</h1>
-        {% include("_navigation.html") %}
-        <section>
-            <header>
-                {% block header %}{% endblock header %}
-            </header>
-            <main>
-                {%block content %}<p>Looks like something went wrong...</p>{% endblock content %}
-            </main>
-        </section>
-    </body>
+
+<head>
+    <title>{% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+</head>
+
+<body>
+    <h1 id="title">brew.</h1>
+    {% include("_navigation.html") %}
+    <section>
+        <header>
+            {% block header %}{% endblock header %}
+        </header>
+        <main>
+            {%block content %}<p>Looks like something went wrong...</p>{% endblock content %}
+        </main>
+    </section>
+</body>
+
 </html>
